# GPGPU

TP1-Ex1-Verification-du-materiel-20260206/: deviceProperties.cu  main
TP1-Ex2-Addition-de-vecteurs-20260206/: main  reference.cpp  student.cu  student.hpp
TP1-Ex2-Addition-de-vecteurs-20260206/utils/: chronoCPU.hpp  chronoGPU.hpp
TP1-Ex3-Filtre-d-image-sepia-20260227/: exo3  reference.cpp  reference.hpp  student.cu  student.hpp
TP1-Ex3-Filtre-d-image-sepia-20260227/img/: flower_sepia_CPU.ppm  flower_sepia_GPU.ppm
TP1-Ex3-Filtre-d-image-sepia-20260227/utils/: chronoCPU.cpp  ppm.cpp
TP1/TP1-Ex1-Verification-du-materiel-20260130/: commonCUDA.hpp  deviceProperties.hpp  main.cu  tp1
TP1/TP1-Ex2-Addition-de-vecteurs-20260130/: exo2  main.cu  reference.hpp  student.cu
TP1/TP1-Ex3-Filtre-d-image-sepia-20260227/: main.cu  student.cu  student.hpp
TP1/TP1-Ex3-Filtre-d-image-sepia-20260227/utils/: chronoGPU.cu
TP2-Ex1-Mandelbrot-Renderer-20260306/: CMakeLists.txt
TP2-Ex1-Mandelbrot-Renderer-20260306/include/mdbr/: window.hpp
TP2-Ex1-Mandelbrot-Renderer-20260306/include/mdbr/cuda/: common.cuh
TP2-Ex1-Mandelbrot-Renderer-20260306/include/mdbr/mandelbrot/: reference.hpp
TP2-Ex1-Mandelbrot-Renderer-20260306/src/: main.cpp  renderer.cpp  window.cpp
TP2-Ex1-Mandelbrot-Renderer-20260306/src/mandelbrot/: reference.cpp
TP2/TP2-Ex1-Mandelbrot-Renderer-20260306/include/mdbr/: renderer.hpp
TP2/TP2-Ex1-Mandelbrot-Renderer-20260306/include/mdbr/cuda/: buffer.cuh
TP2/TP2-Ex1-Mandelbrot-Renderer-20260306/include/mdbr/mandelbrot/: mandelbrot.hpp  (+1 more)
TP2/TP2-Ex1-Mandelbrot-Renderer-20260306/src/mandelbrot/: student.cu
TP2/TP2-Ex1-Mandelbrot-Renderer-20260309/: .clang-format  CMakeLists.txt  imgui.ini
TP2/TP2-Ex1-Mandelbrot-Renderer-20260309/src/: renderer.cpp
TP2/TP2-Ex1-Mandelbrot-Renderer-20260309/src/cuda/: buffer.cu  common.cu
TP2/TP2-Ex1-Mandelbrot-Renderer-20260309/src/mandelbrot/: student.cu
TP2/TP2-Ex2/: convMatrices.hpp  exo2  main.cpp  reference.cpp  reference.hpp  student.cu  student.hpp
TP2/TP2-Ex2/utils/: ppm.hpp
(+2 files in other folders)
